# social_schedule

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.sh  debug_build.sh  generate_html.py
.cargo/: config
.github/: dependabot.yml
benches/: bench.rs  benchmarks.rs
cache/ideal/: 10_players_5_tables  12_players_4_tables  12_players_6_tables  14_players_7_tables  15_players_5_tables  16_players_8_tables  18_players_9_tables  20_players_10_tables  20_players_5_tables  8_players_4_tables
client/: Cargo.toml
client/src/: main.rs
schedule_solver/: Cargo.toml
schedule_solver/src/: box_schedule.rs  fixed_size_schedule.rs  lib.rs  ref_schedule.rs  scheduler.rs  tests.rs  util.rs  word.rs
schedule_util/: Cargo.toml
schedule_util/src/: lib.rs
server/: Cargo.toml
server/src/: api.rs  lib.rs  main.rs  solve_state.rs  ui_pages.rs
src/: add_match_results_page.rs  database.rs  generate_schedule_page.rs  index.html  lib.rs  main.rs  manage_events_page.rs  manage_groups_page.rs  manage_players_page.rs  manage_tournaments_page.rs  preferences_page.rs  schedule.rs  style.css  style_control.rs
tests/: tests.rs
