[package]
name = "social_schedule"
version = "0.1.0"
authors = ["Hugh Williams <mkb2191@protonmail.com"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = {version = "0.7", default-features = false, features = ['alloc']}
rand_xorshift = "0.2"
rand_core = "0.5"
getrandom = {version = "0.1", features = ['wasm-bindgen']}
seed = "0.6"
wasm-bindgen =  "0.2"
web-sys = "0.3"
 
serde = { version = "1.0", features = ['derive']}
serde_json = "1.0"
futures = "0.3"
num-format = "0.4"


clap = { version = "3.0.0-beta.1", optional = true}
num_cpus = { version = "1.0", optional = true}

[dev-dependencies]
quickcheck = "0.9"
criterion = "0.3"

[features]
cli = ["clap", "num_cpus"]

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false
