[package]
name = "social_schedule"
version = "0.1.0"
authors = ["Hugh Williams <mkb2191@protonmail.com"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = {version = "0.8", default-features = false, features = ['alloc']}
rand_xorshift = {version = "0.3", optional = true}
rand_core = "0.6"
getrandom = {version = "0.2", features = ['wasm-bindgen'], optional = true}

seed = {version = "0.8", optional = true}
wasm-bindgen =  {version = "0.2", optional = true}
 
serde = { version = "1.0", features = ['derive']}
serde_json = "1.0"
num-format = "0.4"


clap = { version = "4.0.25", optional = true}
num_cpus = { version = "1.0", optional = true}
dirs = {version = "3.0", optional = true}

[dev-dependencies]
quickcheck = "1.0"
criterion = "0.3"
rand_xorshift = "0.3"

[features]
wasm = ["seed", "wasm-bindgen", "rand_xorshift", "getrandom"]
cli = ["clap", "num_cpus", "dirs"]

[[bench]]
name = "bench"
harness = false

[workspace]
members = ["server", "client", "schedule_solver"]

[profile.release]
#lto = 'thin'
opt-level = 3
debug = true
debug-assertions = false
