[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schedule_solver = {path = "../schedule_solver"}
schedule_util = {path = "../schedule_util"}

clap = { version = "3.0.4"}

serde = { version = "1.0", features = ['derive']}
bincode = "1.3"
futures = "0.3"
tokio-tungstenite = "0.15"
tokio = {version = "1.9.0", default-features = false, features=['macros', 'rt-multi-thread', 'net', 'sync', 'time']}
num_cpus = "1"