[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.9.0", default-features = false, features=['macros', 'rt-multi-thread', 'net']}
seed = {version = "0.8", default-features = false}
serde = { version = "1.0", features = ['derive']}
warp = {version = "0.3", default-features = false}

schedule_solver = {path = "../schedule_solver"}