[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.16.1", default-features = false, features=['macros', 'rt-multi-thread', 'net', 'sync', 'time']}
seed = {version = "0.8", default-features = false}
serde = { version = "1.0", features = ['derive']}
bincode = "1.3"
byte-unit = "4.0"
warp = {version = "0.3", default-features = false, features = ['websocket']}
futures = "0.3"

schedule_solver = {path = "../schedule_solver"}
schedule_util = {path = "../schedule_util"}